--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^6.3.0
   intl: 0.20.2
   path_provider: ^2.1.4
+  photo_view: ^0.15.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
